needs styles part 1 + color variables

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -1,2 +1,7 @@
+$light: #ffddc6;
+$kcal: #81cfff;
+$protein: #adff78;
+$fat: #ff564d;
+$carbo: #ffa63a;
 @import url('https://fonts.googleapis.com/css?family=Lato:400,900&subset=latin-ext');
 @import 'needs';
