--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -1,8 +1,12 @@
-$light: #ffddc6;
+$light: #ffebdb;
 $kcal: #81cfff;
-$protein: #adff78;
+$protein: #98da4e;
 $fat: #ff564d;
 $carbo: #ffa63a;
+
+body,html {
+  margin:0;
+}
 @import url('https://fonts.googleapis.com/css?family=Lato:400,900&subset=latin-ext');
 @import 'needs';
 @import 'fridge';
