--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -6,3 +6,4 @@ $carbo: #ffa63a;
 @import url('https://fonts.googleapis.com/css?family=Lato:400,900&subset=latin-ext');
 @import 'needs';
 @import 'fridge';
+@import 'shop';
