--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -1,3 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,900&subset=latin-ext');
 @import 'needs';
 @import 'fridge';
+
+.hidden {
+  display: none;
+}
