Add scores files

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -10,3 +10,4 @@ body,html {
 @import url('https://fonts.googleapis.com/css?family=Lato:400,900&subset=latin-ext');
 @import 'needs';
 @import 'fridge';
+@import 'score';
