--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Lato:400,900&subset=latin-ext');
+
 $light: #ffebdb;
 $dark: #7a7774;
 $kcal: #81cfff;
@@ -7,8 +9,9 @@ $carbo: #ffa63a;
 
 body,html {
   margin:0;
+  font-family: 'Lato', sans-serif;
 }
-@import url('https://fonts.googleapis.com/css?family=Lato:400,900&subset=latin-ext');
+
 @import 'needs';
 @import 'fridge';
 
