--- a/app/stylesheets/_fridge.scss
+++ b/app/stylesheets/_fridge.scss
@@ -1,28 +1,45 @@
 .fridge {
   height: 100vh;
-  background-color: pink;
+  background-color: #e3efeb;
   display: flex;
 
   &--content {
     background-image: url('../images/fridge.png');
     background-size: contain;
     background-repeat: no-repeat;
+    background-position: center;
     width: 70vw;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+
+
+    &--wrapper {
+      padding-top: 54px;
+      width: 80%;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      margin: 0 auto;
+    }
 
 
     &--item {
       width: 64px;
       height: 64px;
       border-radius: 10px;
-      background: black;
+      background: #e8f9f6;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      margin: 13.5px 40px;
+
+      &:nth-child(5n+2) {
+        transform: translateX(30px);
+      }
+
+      &:nth-child(5n+4) {
+        transform: translateX(-30px);
+      }
     }
   }
 
