--- a/app/stylesheets/_general.scss
+++ b/app/stylesheets/_general.scss
@@ -8,14 +8,10 @@ body,html {
 }
 
 .well {
-  display: flex;
-  align-content: space-around;
-  flex-wrap: wrap;
-
   .item {
     background: #eee;
     padding: 10px 15px;
-    margin: 20px 10px;
+    margin: 20px 20px 0;
     border-radius: 20px;
     img {
       width: 64px;
