--- a/app/stylesheets/_shop.scss
+++ b/app/stylesheets/_shop.scss
@@ -2,3 +2,10 @@
   margin: auto;
   width: 800px;
 }
+
+.shelf {
+  display: flex;
+  justify-content: space-around;
+  border-radius: 20px;
+  border-bottom: 20px solid #942a00;
+}
