Fix fridge width

--- a/app/stylesheets/_fridge.scss
+++ b/app/stylesheets/_fridge.scss
@@ -8,7 +8,7 @@
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    width: 70vw;
+    width: 956.2px;
 
 
     &--wrapper {
@@ -44,7 +44,7 @@
   }
 
   &--stats {
-    width: 30vw;
+    width: 400px;
     background-color: #f5f9ca;
   }
 }
