welcome page red rageee

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -4,9 +4,12 @@ $kcal: #81cfff;
 $protein: #98da4e;
 $fat: #ff564d;
 $carbo: #ffa63a;
+$red: #DF1A1A;
+$darkred: #AE0202;
 
 @import url('https://fonts.googleapis.com/css?family=Lato:400,900&subset=latin-ext');
 @import 'general';
+@import 'welcome';
 @import 'needs';
 @import 'fridge';
 @import 'score';
