--- a/app/stylesheets/_score.scss
+++ b/app/stylesheets/_score.scss
@@ -4,12 +4,20 @@
 	align-items: center;
 	justify-content: center;
 	align-self: center;
+	h1,h2 {
+		width: 100%;
+	}
 	h1 {
 		font-size: 54px;
 		font-family: 'Lato', Tahoma;
 	}
 	h2 {
 		font-size: 48px;
+	}
+
+	img {
+		width: 64px;
+		height: 64px;
 	}
 }
 
