--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -11,6 +11,7 @@ $darkred: #AE0202;
 @import 'general';
 @import 'welcome';
 @import 'needs';
+@import 'monster';
 @import 'fridge';
 @import 'score';
 @import 'shop';
