--- a/app/stylesheets/_shop.scss
+++ b/app/stylesheets/_shop.scss
@@ -9,3 +9,9 @@
   border-radius: 20px;
   border-bottom: 20px solid #942a00;
 }
+
+#timer {
+  margin-top: 20px;
+  float: right;
+  height: 100px;
+}
