--- a/app/stylesheets/_score.scss
+++ b/app/stylesheets/_score.scss
@@ -21,9 +21,25 @@
 		font-size: 72px;
 	}
 
+	h3 {
+		justify-content: space-around;
+		text-align: center;
+		width: 100%;
+		float: left;
+	}
+
 	img {
 		width: 64px;
 		height: 64px;
 	}
+
+	a{
+		margin-left: 70%;
+		text-decoration: none;
+	    background-color:$darkred;
+	    padding: 20px;
+	    color: #FFF;
+	    border-radius:10%;
+  	}
 }
 
