--- a/app/stylesheets/_score.scss
+++ b/app/stylesheets/_score.scss
@@ -34,12 +34,13 @@
 	}
 
 	a{
-		margin-left: 70%;
-		text-decoration: none;
-	    background-color:$darkred;
+		background-color:$light;
 	    padding: 20px;
-	    color: #FFF;
+	    color: $red;
 	    border-radius:10%;
+	    margin-left:450px;
+	    margin-top: 50px;
+	    font-size:20px;
   	}
 }
 
