add eating feature

--- a/app/stylesheets/_fridge.scss
+++ b/app/stylesheets/_fridge.scss
@@ -41,6 +41,10 @@
       &:nth-child(5n+4) {
         transform: translateX(-30px);
       }
+
+      img {
+        width: 100%;
+      }
     }
   }
 
