--- a/app/stylesheets/_fridge.scss
+++ b/app/stylesheets/_fridge.scss
@@ -52,6 +52,7 @@
     flex-wrap: wrap;
 
     &--button {
+      margin-top:30px;
       color: white;
       text-decoration: none;
       padding: 10px 30px;
