--- a/app/stylesheets/_shop.scss
+++ b/app/stylesheets/_shop.scss
@@ -15,3 +15,20 @@
   float: right;
   height: 100px;
 }
+
+#shop .circleScore {
+	text-align: center;
+	position: absolute;
+	left: 2%;
+	top: 80%;
+	background: $red;
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	color: #FFF;
+	line-height: 100px;
+}
+
+#shop .well {
+	margin-bottom: 25px;
+}
