missing dot in scss

--- a/app/stylesheets/_tips.scss
+++ b/app/stylesheets/_tips.scss
@@ -6,7 +6,8 @@
   background: linear-gradient(to left, $black, $lighterblack);
   height:100vh;
   color:white;
-  container{
+  
+  .container{
     width:50%;
     margin:0 auto;
   }
