fix problem with button

--- a/app/stylesheets/_shop.scss
+++ b/app/stylesheets/_shop.scss
@@ -29,6 +29,10 @@
 	line-height: 100px;
 }
 
-#shop .well {
-	margin-bottom: 25px;
+#shop .nextStep {
+	margin-top: 25px;
+}
+
+.cart {
+	margin-top: -20px;
 }
