--- a/app/stylesheets/_general.scss
+++ b/app/stylesheets/_general.scss
@@ -27,7 +27,7 @@ section{
 a{
   text-decoration: none;
   padding: 10px;
-  border-radius:10%;
+  border-radius:10px;
   background-color: $red;
   color: white;
 }
