--- a/app/stylesheets/_score.scss
+++ b/app/stylesheets/_score.scss
@@ -41,7 +41,7 @@
 		background-color:$light;
 	    padding: 20px;
 	    color: $red;
-	    border-radius:10%;
+	    border-radius:10px;
 	    margin-left:450px;
 	    margin-top: 50px;
 	    font-size:20px;
