--- a/app/stylesheets/_welcome.scss
+++ b/app/stylesheets/_welcome.scss
@@ -19,7 +19,7 @@ color: $light;
     background-color:$light;
     padding: 20px;
     color: $red;
-    border-radius:10%;
+    border-radius:10px;
     margin-left:450px;
     margin-top: 50px;
     font-size:20px;
