--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -6,8 +6,8 @@ $fat: #ff564d;
 $carbo: #ffa63a;
 $red: #DF1A1A;
 $darkred: #AE0202;
-$black: #230000;
-$lighterblack: #280404;
+$black: #3d3939;
+$lighterblack: #484345;
 
 @import url('https://fonts.googleapis.com/css?family=Lato:400,900&subset=latin-ext');
 @import 'general';
