red circle disapear from welcome page, at last!

--- a/app/stylesheets/_needs.scss
+++ b/app/stylesheets/_needs.scss
@@ -20,7 +20,7 @@
     .blank {
 
       height: 50%;
-      background-color: $light;
+      background-color: $beige;
     }
     .limit{
       top:30%;
@@ -31,7 +31,7 @@
     .blank {
 
       height: 70%;
-      background-color: $light;
+      background-color: $beige;
     }
     .limit{
       top:80%;
@@ -41,7 +41,7 @@
     background-color: $fat;
     .blank {
       height: 90%;
-      background-color: $light;
+      background-color: $beige;
     }
     .limit{
       top:60%;
@@ -52,7 +52,7 @@
     .blank {
 
       height: 60%;
-      background-color: $light;
+      background-color: $beige;
     }
     .limit{
       top:60%;
