--- a/app/stylesheets/_fridge.scss
+++ b/app/stylesheets/_fridge.scss
@@ -51,7 +51,8 @@
         background-color: white;
         color: #666;
         border-radius: 10px;
-
+      }
+      
       img {
         width: 100%;
       }
