--- a/app/stylesheets/_general.scss
+++ b/app/stylesheets/_general.scss
@@ -52,6 +52,13 @@ a{
   color: white;
 }
 
+.credits {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  color: silver;
+}
+
 [id=media-player] {
   position: fixed;
   bottom: 0;
