--- a/app/stylesheets/_monster.scss
+++ b/app/stylesheets/_monster.scss
@@ -2,23 +2,29 @@
   height: 100vh;
   display: flex;
   position: relative;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 
   &--right {
-    flex: 2 0 0;
+    //flex: 2 0 0;
+    // max-height: 300px;
   }
 
   &--left {
-    flex: 1 0 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding: 0 100px;
+    // max-height: 300px;
+    //flex: 1 0 0;
+    //display: flex;
+    //justify-content: center;
+    //align-items: center;
   }
 
   &--img {
   }
 
   &--message{
-    margin-top: 150px;
+    //margin-top: 150px;
 
     &--content {
       width: 300px;
@@ -26,12 +32,24 @@
   }
 
   &--button {
-    top: 320px;
+    //top: 320px;
+  }
+
+  .title {
+    position: absolute;
+    bottom: 0;
+    transform: rotateZ(-90deg) translateX(50%);
+    opacity: 0.4;
+    width: 44px;
+  }
+
+  .limit {
+    display: none;
   }
 
   .button {
-    width:100px;
-    height:400px;
+    //width:100px;
+    //height:400px;
   }
 
   .needs {
